scrollbar fix

--- a/web/style/input.css
+++ b/web/style/input.css
@@ -29,22 +29,22 @@
   }
 
   ::-webkit-scrollbar-track {
-    background: #f1f1f1;
+    background: var(--color-bgPrimary);
     border-radius: 5px;
   }
 
   ::-webkit-scrollbar-thumb {
-    background: #888;
+    background: var(--color-bgPrimary);
     border-radius: 5px;
   }
 
   ::-webkit-scrollbar-thumb:hover {
-    background: #555;
+    background: var(--color-bgPrimary);
   }
 
   /* Firefox scrollbar styles */
   * {
     scrollbar-width: thin;
-    scrollbar-color: #888 #f1f1f1;
+    scrollbar-color: var(--color-bgPrimary) var(--color-bgPrimary);
   }
 }
